  - EnvMatch supports infostore variables.
  - The option "forget" to the Maximize command allows to
    unmaximize a window without changing its size and position.

* Bug fixes:

  - Provide a wrapper for the deprecation of XKeycodeToKeysym and
    use XkbKeycodeToKeysym() where appropriate.
  - fvwm-desktop-menu is re-written and provides better support of
    the XDG menu specification.

-------------------------------------------------------------------
Changes in release 2.6.5 (20-Apr-2012)

* New features:

  - FvwmPager now wraps window names if SmallFont is set.

* Bug fixes:

  - Made signals registered with FVWM unblocking.
  - The "UnderMouse" option to PositionPlacement now honors the EWMH
    working area by default, if it's in use.
  - FvwmButtons handles the deleted window correctly for sub-windows.

-------------------------------------------------------------------
Changes in stable release 2.6.4 (01-Feb-2012)

* New features:

  - FvwmIconMan no longer allows for itself to be transient by using:

    Module FvwmIconMan Transient

    This is too ambiguous with valid module alias names, hence a
    transient FvwmIconMan must be created with "-Transient" as in:

    Module FvwmIconMan -Transient
  - New command InfoStore -- to store key/value pairs of information
    to relieve the burden of the SetEnv command.
  - Speed-up improvements for fvwm-menu-desktop when generating XDG
    menus by removing unnecessary stat(2) calls.
  - BusyCursor and CursorStyle have been set to make the cursor look
    like a dot during Read/PipeRead commands, by default.

* Bug fixes:

  - FvwmRearrange now understands the "ewmhiwa" option when placing
    windows.
  - Client gravity for subwindows is honoured for reparenting
    windows, such as with XEmbed, when changing the parent's
    geometry.
  - Conditional command processing of !Layer n, as in:

        Next (Xteddy, !Layer 4) Echo cuddles

    has now been fixed.