@@ -1,3 +1,9 @@
+2013-04-14  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
+
+	* FvwmIconMan/x.c (change_colorset, recreate_background)
+	(create_manager_window):
+	fix bad hilight colour on some systems (64 bit issue?)
+
 2013-04-24  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
 
 	* FvwmScript/Instructions.c (Exec, FuncGetOutput, LaunchScript)
